mobile spacing fixed

--- a/dev/styles/_aboutMe.scss
+++ b/dev/styles/_aboutMe.scss
@@ -87,6 +87,7 @@
 
    .aboutMe {
       margin-top: -25px;
+      padding-left: 0;
       width: 100%;
       text-align: center;
       h2 {
