--- a/dev/styles/_hero.scss
+++ b/dev/styles/_hero.scss
@@ -94,7 +94,7 @@
       flex-direction: column;
       padding: 5px 0 0;
       text-align: center;
-      a {
+      h2 {
          display: none;
       }
    }
