--- a/dev/styles/_portfolio.scss
+++ b/dev/styles/_portfolio.scss
@@ -78,6 +78,10 @@
       width: 100%;
       order: 1;
    }
+
+   .viewLive {
+      text-align: center;
+   }
    
    .portfolioDesc2, .portfolioDesc {
       order: 2;
